Fix main title alignment

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 }
 
 body {
-    /* font-family: 'Tungsten-semibold', Arial, serif; */
+    font-family: 'Tungsten-bold', Arial, serif;
     overscroll-behavior: none;
     -ms-overflow-style: none;
     text-rendering: optimizeLegibility;
